 (Format: Year/Month/Day)
Changes for 1.0.0:
*07/04/11:
   * updated asciidoc-docs, (Mathias, thanks Christian Loosli for fluxbox.de.txt)
*07/04/08:
   * Menu when clicking workspacename in toolbar wasn't getting focused (Mark)
     ToolFactory.cc
   * Buttons with different textures when pressed weren't getting reset
     properly (Mark)
     FbTk/Button.cc
   * Only replace numbers with zeros when calculating clock width (Simon)
     Otherwise width of things in proportional fonts can be way out.
     sf.net bug #1545066.
     ClockTool.cc
*07/04/05:
   * Adjusted detection of Caps Lock key (Mark)
     FbTk/KeyUtil.cc/hh
*07/04/01:
   * Fixed a problem with windows being created in iconic state (Mark)
     Window.cc Screen.cc fluxbox.cc
*07/03/31:
   * Fix window menu context when opened by clicking on tab (Simon)
     sf.net bug #1652185
     Window.hh/cc
   * Default value for $LAUNCHER, plus add util and util/fbrun to the 
     PATH when generating install menu so it can find fbrun (Simon)
     fluxbox-generate_menu.in Makefile.am data/Makefile.am
   * Make fluxbox-generate_menu emit [encoding] tags around all of its
     menus. Please check that it is the right encoding, I had to guess
     some as it wasn't recorded (Simon)
     util/fluxbox-generate_menu.in
*07/03/30:
   * Added fi_FI support (Thanks Pasi Juvonen, loudvr at yahoo ca)
    nls/fi_FI/*, util/fluxbox-generate_menu.in
*07/03/28:
   * Startup file wasn't being run properly when created the first time (Mark)
     util/startfluxbox.in
*07/03/24:
   * Updated French translations (thanks Ulrich Etile)
     nls/fr_FR/Translation.m
   * Fixed a little bug in fbsetbg (Mark)
     util/fbsetbg
   * Workspace Menu wasn't updating when windows changed titles (Mark)
     Workspace.cc
*07/03/21:
   * HideMenus didn't work on CustomMenus, and also fixed a memleak with
     CustomMenu (Mark + thanks Julien Trolet)
     FbCommands.cc/hh
--------------------------------	
Changes for 1.0rc3:
*07/03/20: