@@ -26,7 +26,6 @@
 
 #include "FbDrawable.hh"
 
-#include <X11/Xlib.h>
 #include <memory>
 #include <string>
 #include <set>
